@@ -815,12 +815,22 @@ int zbar_scan_image (zbar_image_scanner_t *iscn,
         zbar_symbol_t **symp;
         for(symp = &syms->head; *symp; ) {
             zbar_symbol_t *sym = *symp;
-            if((sym->type < ZBAR_COMPOSITE && sym->type > ZBAR_PARTIAL) ||
+            if(sym->cache_count <= 0 &&
+               (sym->type < ZBAR_COMPOSITE && sym->type > ZBAR_PARTIAL) ||
                sym->type == ZBAR_DATABAR ||
                sym->type == ZBAR_DATABAR_EXP ||
                sym->type == ZBAR_CODABAR)
             {
 	        if((sym->type == ZBAR_CODABAR || filter) && sym->quality < 4) {
+                    if(iscn->enable_cache) {
+                        /* revert cache update */
+                        zbar_symbol_t *entry = cache_lookup(iscn, sym);
+                        if(entry)
+                            entry->cache_count--;
+                        else
+                            assert(0);
+                    }
+
                     /* recycle */
                     *symp = sym->next;
                     syms->nsyms--;
